declare project as module-based

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nomads-spinner",
   "version": "0.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "start": "vite",
