--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomads-spinner",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "description": "",
   "scripts": {
@@ -20,6 +20,7 @@
     "@solidjs/router": "^0.14.3",
     "animate.css": "^4.1.1",
     "emoji-picker-element": "^1.22.4",
+    "js-confetti": "^0.12.0",
     "peerjs": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "sass": "^1.77.8",
